# duchamp

./: .gitignore  CHANGES  InputComplete  InputExample  Makefile  Makefile.in  README  README-beta  VerifyDuchamp.sh  configure  configure.ac  duchamp.dox  duchamp.hh  fixMakefile.sh  mainDuchamp.cc  param.cc  param.hh
ATrous/: ReconSearch.cc  atrous.cc  atrous.hh  atrous_1d_reconstruct.cc  atrous_2d_reconstruct.cc  atrous_3d_reconstruct.cc  atrous_transform.cc  baselineSubtract.cc  find_sources_atrous.cc  search_3D.cc  search_3D_bits.cc  search_velocity.cc
Cubes/: Merger.cc  baseline.cc  cubes.cc  cubes.hh  cubicSearch.cc  detectionIO.cc  drawMomentCutout.cc  getImage.cc  invertCube.cc  outputSpectra.cc  plots.hh  plotting.cc  readRecon.cc  removeMW.cc  saveImage.cc  trimImage.cc
Detection/: areClose.cc  detection.cc  detection.hh  growObject.cc  lutz_detect.cc  mergeIntoList.cc  outputDetection.cc  sorting.cc  spectrumDetect.cc  thresholding_functions.cc
Utils/: cpgcumul.c  cpghist_log.c  getStats.cc  get_random_spectrum.cc  linear_regression.cc  menus.cc  position_related.cc  sort.cc  utils.hh  wcsFunctions.cc  zscale.cc
docs/: Duchamp-Doxyfile  DuchampFlow.graffle  Guide-URL-bib.tex  Guide.bbl  Guide.tex  Reconstruction.tex  acknowledgements.tex  app-DS9.tex  app-Karma.tex  app-VOTable.tex  app-casa.tex  app-install.tex  app-param.tex  app-paramEx.tex  app-resultsEx-input.in  app-resultsEx.tex  app-stats.tex  app-waveletNoise.tex  cover_image.ps  exampleObject.ps  example_detection_spectrum.ps  example_moment_map.ps  example_spectrum.ps  executionFlow.tex  future.tex  guide.bib  hints.tex  intro.tex  outputs.tex  sourceParameterisation.tex  userInputs.tex
src/: config.h  config.h.in  duchamp.cc  duchamp.hh  fitsHeader.cc  fitsHeader.hh  mainDuchamp.cc  mainRrose.cc  mainSelavy.cc  param.cc  param.hh  pgheader.hh
src/ATrous/: B3SplineFilter.cc  B3SplineFilter.hh  FilterFactory.cc  FilterFactory.hh  HaarFilter.cc  HaarFilter.hh  ReconSearch.cc  TriangleFilter.cc  TriangleFilter.hh  atrous.cc  atrous.hh  atrous_1d_reconstruct.cc  atrous_2d_reconstruct.cc  atrous_3d_reconstruct.cc  atrous_reconstruct.cc  atrous_transform.cc  baselineSubtract.cc  filter.cc  filter.hh  search_spatially.cc
src/Cubes/: Annotation.cc  Annotation.hh  AnnotationKarma.cc  AnnotationKarma.hh  CubicSearch.cc  Merger.cc  ReadAndSearch.cc  ReadExisting.cc  ReadExistingRecon.cc  ReadExistingRecon.hh  ReadExistingSmooth.cc  ReadExistingSmooth.hh  VOTable.cc  VOTable.hh  WriteArray.cc  WriteArray.hh  WriteBaselineArray.cc  WriteBaselineArray.hh  WriteMaskArray.cc  WriteMaskArray.hh  WriteMomentMapArray.cc  WriteMomentMapArray.hh  WriteReconArray.cc  WriteReconArray.hh  WriteSmoothArray.cc  WriteSmoothArray.hh  baseline.cc  cubeUtils.hh  cubes.cc  cubes.hh  cubes_extended.cc  cubicSearch.cc  cubicSearchNMerge.cc  detectionIO.cc  drawBlankEdges.cc  drawMomentCutout.cc  existingDetections.cc  getImage.cc  invertCube.cc  momentMap.cc  (+11 more)
src/Detection/: ObjectGrower.cc  ObjectGrower.hh  areClose.cc  columns.cc  columns.hh  detection.cc  detection.hh  drawBorders.cc  find_sources.cc  finders.hh  growObject.cc  lutz_detect.cc  mergeIntoList.cc  outputDetection.cc  sorting.cc  spectrumDetect.cc  thresholding_functions.cc  voxel.cc  voxel.hh
src/Devel/: devel.hh  get_random_spectrum.cc  menus.cc  plotImage.cc  plottingUtilities.cc  sigma_factors.cc  spectralSelection.cc  trimStats.cc
src/FitsIO/: Beam.cc  Beam.hh  DuchampBeam.cc  DuchampBeam.hh  ReadAndSearch.cc  ReadExisting.cc  ReadExisting.hh  ReadExistingRecon.cc  ReadExistingRecon.hh  ReadExistingSmooth.cc  ReadExistingSmooth.hh  WriteArray.cc  WriteArray.hh  WriteBaselineArray.cc  WriteBaselineArray.hh  WriteMaskArray.cc  WriteMaskArray.hh  WriteMomentMapArray.cc  WriteMomentMapArray.hh  WriteMomentMaskArray.cc  WriteMomentMaskArray.hh  WriteReconArray.cc  WriteReconArray.hh  WriteSmoothArray.cc  WriteSmoothArray.hh  dataIO.cc  headerIO.cc  readData.cc  subsection.cc  wcsIO.cc
src/Outputs/: ASCIICatalogueWriter.cc  ASCIICatalogueWriter.hh  AnnotationWriter.cc  AnnotationWriter.hh  CasaAnnotationWriter.cc  CasaAnnotationWriter.hh  CatalogueSpecification.cc  CatalogueSpecification.hh  CatalogueWriter.cc  CatalogueWriter.hh  DS9AnnotationWriter.cc  DS9AnnotationWriter.hh  FileCatalogueWriter.cc  FileCatalogueWriter.hh  KarmaAnnotationWriter.cc  KarmaAnnotationWriter.hh  VOTableCatalogueWriter.cc  VOTableCatalogueWriter.hh  columns.cc  columns.hh
src/PixelMap/: ChanMap.cc  ChanMap.hh  Line.cc  Line.hh  Object2D.cc  Object2D.hh  Object3D.cc  Object3D.hh  Scan.cc  Scan.hh  Voxel.cc  Voxel.hh
src/Plotting/: CutoutPlot.cc  CutoutPlot.hh  DuchampPlot.cc  DuchampPlot.hh  ImagePlot.cc  ImagePlot.hh  MultipleDuchampPlot.cc  MultipleDuchampPlot.hh  SimpleSpectralPlot.cc  SimpleSpectralPlot.hh  SpectralPlot.cc  SpectralPlot.hh
src/Utils/: GaussSmooth.cc  GaussSmooth.hh  GaussSmooth1D.cc  GaussSmooth1D.hh  GaussSmooth2D.cc  GaussSmooth2D.hh  GaussSmooth2D.tcc  Hanning.cc  Hanning.hh  PlottingUtilities.cc  Section.cc  Section.hh  Statistics.cc  Statistics.hh  VOField.cc  VOField.hh  VOParam.cc  VOParam.hh  cpgcumul.c  cpgwedg_log.c  devel.hh  drawBlankEdges.cc  feedback.cc  feedback.hh  getNormalStats.cc  getRobustStats.cc  getStats.cc  get_random_spectrum.cc  interpolation.cc  linear_regression.cc  medianBaseline.cc  menus.cc  mycpgplot.cc  mycpgplot.hh  pgplot_related.c  plottingUtilities.cc  position_related.cc  sigma_factors.cc  sort.cc  spectralSelection.cc  (+4 more)
src/duchamp/: duchamp.hh  (+3 more)
verification/: createTestImage.cc  input1  input2  input3  input4  input5  input6  input7  input8  input9  stdLog1.txt  stdLog2.txt  stdLog3.txt  stdLog4.txt  stdLog5.txt  stdLog6.txt  stdLog7.txt  stdLog8.txt  stdLog9.txt  stdResults1.ann  stdResults1.reg  stdResults1.txt  stdResults1.xml  stdResults2.ann  stdResults2.reg  stdResults2.txt  stdResults2.xml  stdResults3.ann  stdResults3.reg  stdResults3.txt  stdResults3.xml  stdResults4.ann  stdResults4.reg  stdResults4.txt  stdResults4.xml  stdResults5.ann  stdResults5.reg  stdResults5.txt  stdResults5.xml  stdResults6.ann  (+18 more)
(+70 files in other folders)
